chore: `geo-zone` or `geoZone` => `geozone`
